--- a/demo/8组件基础.html
+++ b/demo/8组件基础.html
@@ -11,6 +11,7 @@
 <body>
 	<div id="app">
 		<!-- 基础 -->
+		<!-- 嵌套组件内部component2被忽略 -->
 		<component1>
 			<component2></component2>
 		</component1>
