--- a/example/26混入选项合并.html
+++ b/example/26混入选项合并.html
@@ -46,7 +46,7 @@
 					data3: 'def'
 				}
 			},
-			// '组件钩子后调用
+			// 组件钩子后调用
 			created: function () {
 				console.log('组件钩子被调用', this.$data)
 				// => { message: "goodbye", foo: "abc", bar: "def" }
