--- a/example/31渲染函数二.html
+++ b/example/31渲染函数二.html
@@ -35,12 +35,14 @@
 							}
 						}
 						// createElement方法第一个参数为组件的情况，无第三个参数
-						let vnode = createElement(com, {
-							attrs: {
-								class: 'h' + this.level,//不同属性叠加,
-								id: 'aaa'//相同属性覆盖掉第一个参数组件中设置的相同属性
-							}
-						});
+						let vnode = createElement(com,
+							{
+								attrs: {
+									class: 'h' + this.level,//不同属性叠加,
+									id: 'aaa'//相同属性覆盖掉第一个参数组件中设置的相同属性
+								}
+							},
+							'fadsf');
 						return vnode;
 					},
 					props: {
