--- a/example/过渡和动画/1单元素组件的过渡.html
+++ b/example/过渡和动画/1单元素组件的过渡.html
@@ -5,11 +5,11 @@
 	<title></title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="../js/vue.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
 	<style>
 		.v-enter-active,
 		.v-leave-active {
-			transition: opacity 10s;
+			transition: opacity .5s;
 		}
 
 		.v-enter,
@@ -24,7 +24,7 @@
 
 		.slide-fade-enter-active,
 		.slide-fade-leave-active {
-			transition: all 50s ease;
+			transition: all .5s ease;
 		}
 
 		.slide-fade-enter,
