--- a/example/7表单输入.html
+++ b/example/7表单输入.html
@@ -115,7 +115,7 @@
 				pickedStr2: '单选串2',
 				pickedArr: [],
 				singleSelectedStr1: '',
-				singleSelectedStr2: '',
+				singleSelectedStr2: 's2',
 				singleSelectedStr3: '',
 				multipleSelectedArr: ['A'],
 				selected: '',
