--- a/example/5列表渲染.html
+++ b/example/5列表渲染.html
@@ -47,7 +47,7 @@
 			<li v-for="n in even(numbers)">{{ n }}</li>
 		</ul>
 		<ul>
-			<template v-for="item in items">
+			<template v-for="item in items" :key="index">
 				<li>{{ item.msg }}</li>
 				<li class="divider">divider</li>
 			</template>
