--- a/example/购物车/index.html
+++ b/example/购物车/index.html
@@ -31,7 +31,7 @@
 							<td>{{item.goodsName}}</td>
 							<td>{{item.price}}</td>
 							<td>
-								<button type="button" @click="reduce(index)" :disabled="item.count===0">-</button>
+								<button type="button" @click="reduce(index)" :disabled="item.count===0||!item.checked">-</button>
 								{{item.count}}
 								<button type="button" @click="add(index)" :disabled="!item.checked">+</button>
 							</td>
